<resources>
    <string name="app_name">UltimoCuatri</string>
    <string name="titulo">Mi Primer Aplicación Móvil</string>
    <string name="tunombre">Cual es tu Nombre</string>
    <string name="pulsar">Pulsame</string>
    <string name="limpiar">Limpiar</string>
    <string name="cerrar">Cerrar</string>


    <string name="miempresa">Servicios Informáticos</string>
    <string name="alumno">Jorge Luis Zamudio Osuna</string>
    <string name="matricula">2022030095</string>
    <string name="materia">Desarrollo Móvil</string>
    <string name="desImaCot">Logo Toyota</string>


    <string name="resultado">Su resultado aparecerá aquí</string>
    <string name="imc">Práctica IMC</string>
    <string name="altura">Captura la Altura (En metros)</string>
    <string name="peso">Captura el Peso (En kg)</string>
    <string name="calcular">Calcular</string>


    <string name="grados">Conversión de Grados</string>"
    <string name="gradosCalc">Captura los grados a convertir</string>
    <string name="far">Convertir de Celsius a Fahrenheit</string>
    <string name="cel">Convertir de Fahrenheit a Celsius</string>


    <string name="monedas">Conversión de Monedas</string>
    <string name="solicitud">Cantidad a cambiar</string>
    <string name="SwitchModo1">Modo Patrick</string>
    <string name="SwitchModo2">Modo Propio  </string>

    <string-array name="monedas">
        <item>Dolares Americanos</item>
        <item>Dolar Canadiense</item>
        <item>Euros</item>
        <item>Libras Esterlinas</item>
    </string-array>

    <string name="dolara">19.37</string>
    <string name="dolarc">13.97</string>
    <string name="euro">21.95</string>
    <string name="libra">26.00</string>
    <string name="eur">EUR €</string>
    <string name="lib">GBP £</string>
    <string name="usd">USD $</string>
    <string name="cad">CAD $</string>


    <string name="domicilio">Av. del Mar 1200</string>
    <string name="ciudad">Mazatlán Sinaloa</string>
    <string name="marca">Toyota</string>
    <string name="cliente">Nombre del Cliente</string>
    <string name="folio">Num. Folio</string>
    <string name="des">Descripción del Automóvil</string>
    <string name="precio">Valor del Automóvil</string>
    <string name="po">Porcentaje de pago Inicial</string>
    <string name="plazos">Plazos</string>
    <string name="pmensual">Pago Mensual</string>
    <string name="pinicial">Porcentaje de Pago Inicial</string>
    <string name="tfin">Total a Financiar</string>


    <string name="spinner_name">Spinner Personalizado</string>

    <string name="itemFrases"> Categorías de Frases</string>
    <string name="itemAgradecimiento">Agradecimiento</string>
    <string name="itemAmor">Amor</string>
    <string name="itemNewYear">Feliz Año Nuevo</string>
    <string name="itemCanciones">Canciones</string>

    <string name="msgFrase">Desplegar</string>
    <string name="msgAgradecimiento">Prueba dar las Gracias</string>
    <string name="msgAmor"> Enamora con estas frases</string>
    <string name="msgNewYear">Feliz Año Nuevo</string>
    <string name="msgCanciones">Escucha solo lo mejor</string>

    <string name="msgSeleccion">Se ha Seleccionado</string>
    <string name="msgDescripcion">Selecciona una Categoria</string>

    <string name="al1_nom"></string>
    <string name="al1_matr"></string>
    <string name="al1_carrera"></string>

    <string name="al2_nom"></string>
    <string name="al2_matr"></string>
    <string name="al2_carrera"></string>

    <string name="al3_nom"></string>
    <string name="al3_matr"></string>
    <string name="al3_carrera"></string>

    <string name="al4_nom"></string>
    <string name="al4_matr"></string>
    <string name="al4_carrera"></string>

    <string name="noSelect">No has seleccionado nada</string>
</resources>