<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Monedas">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/encabezado"
            android:layout_gravity="center"
            android:paddingBottom="10sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monedas"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:gravity="center"
                android:paddingTop="10sp"/> 
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8sp"
            android:layout_marginBottom="16sp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="numberDecimal"
                android:hint="@string/solicitud"
                android:textSize="15sp"
                android:textAlignment="center"
                android:id="@+id/txtCantidad">
            </EditText>
        </LinearLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gridPatrick"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="16dp">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:id="@+id/spnMoneda">

            </Spinner>
        </GridLayout>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gridPropio"
            android:layout_gravity="center"
            android:columnCount="2"
            android:columnOrderPreserved="true"
            android:orientation="horizontal"
            android:visibility="visible">
            <CheckBox
                android:id="@+id/eur"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/euro"/>
            <TextView
                android:text="@string/eur"
                android:paddingLeft="30sp"
                android:layout_gravity="center"
                android:layout_column="1"/>
            <CheckBox
                android:id="@+id/lib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="left|center_vertical"
                android:text="@string/libra" />
            <TextView
                android:text="@string/lib"
                android:paddingLeft="30sp"
                android:layout_gravity="center"
                android:layout_column="1"/>
            <CheckBox
                android:id="@+id/usd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_gravity="center"
                android:text="@string/dolara" />
            <TextView
                android:text="@string/usd"
                android:paddingLeft="30sp"
                android:paddingTop="15sp"
                android:layout_column="1"/>
            <CheckBox
                android:id="@+id/cad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/dolarc"/>
            <TextView
                android:text="@string/cad"
                android:paddingLeft="30sp"
                android:layout_column="1"/>
        </GridLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25sp"
            android:rowCount="2"
            android:columnCount="3"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/rojo"
                android:text="@string/resultado"
                android:layout_columnSpan="3"
                android:layout_columnWeight="1"
                android:paddingBottom="15dp"
                android:id="@+id/lblResultado"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_columnWeight="1"
                android:text="@string/calcular"
                android:id="@+id/btnCalcular"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="center"
                android:text="@string/limpiar"
                android:id="@+id/btnLimpiar"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_columnWeight="1"
                android:text="@string/cerrar"
                android:id="@+id/btnCerrar"/>

        </GridLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20sp">
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchModo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="184sp"/>
            <TextView
                android:id="@+id/indicadorModo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/switchModo"
                android:paddingTop="8sp"
                android:gravity="center"
                android:text="@string/SwitchModo2"
                android:textColor="@color/white"/>
        </RelativeLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>