<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IMC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/encabezado"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/imc"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:paddingLeft="160dp"
                android:paddingTop="10dp"/>
        </RelativeLayout>

        <EditText
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/altura"
            android:inputType="numberDecimal"
            android:autofillHints="name"
            android:id="@+id/txtAltura"/>
        <EditText
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/peso"
            android:inputType="numberDecimal"
            android:autofillHints="name"
            android:id="@+id/txtPeso"/>

        <TextView
            android:id="@+id/lblResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="80dp"
            android:paddingTop="10dp"
            android:paddingRight="80dp"
            android:paddingBottom="10dp"
            android:text="@string/resultado"
            android:textColor="@color/rojo"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:id="@+id/btnCalcular"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpiar"
                android:id="@+id/btnLimpiar"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrar"
                android:id="@+id/btnCerrar"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>