<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cotizacion">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/txtCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:text="Nombre del Cliente"
            android:textAlignment="center"
            android:textColor="@color/rojo"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtFolio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/folio" />

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:text="@string/des" />

        <EditText
            android:id="@+id/txtPorcentaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pinicial"
            android:inputType="numberDecimal"
            android:paddingBottom="20sp"
            android:textAlignment="textEnd" />

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio"
            android:inputType="number"
            android:paddingBottom="20sp"
            android:textAlignment="textEnd" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20sp"
            android:text="@string/plazos"
            android:textAlignment="center"
            android:textColor="@color/rojo"
            android:textSize="20sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rdb12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="12 Meses" />

            <RadioButton
                android:id="@+id/rdb24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="24 Meses" />

            <RadioButton
                android:id="@+id/rdb26"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="26 Meses" />

            <RadioButton
                android:id="@+id/rdb36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="36 Meses" />

            <RadioButton
                android:id="@+id/rdb48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="48 Meses" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular" />

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/limpiar" />

            <Button
                android:id="@+id/btnCerrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cerrar" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="Calculos"
            android:textAlignment="center"
            android:textColor="@color/rojo"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtPagoInicial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pinicial"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtTotalFin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tfin"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtPagoMensual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pmensual"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>