<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Convertir">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/grados" >
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/gradosCalc"
            android:layout_marginTop="20sp"
            android:id="@+id/txtCantidad"
            android:textAlignment="center">
        </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15sp">
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/radioGru"
                android:layout_marginTop="16sp"
                android:layout_marginBottom="16sp">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/far"
                    android:textSize="20sp"
                    android:checked="true"
                    android:id="@+id/rdbFar">
                </RadioButton>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15sp"
                    android:text="@string/cel"
                    android:textSize="20sp"
                    android:checked="true"
                    android:id="@+id/rdbCel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Su resultado aparecerá aquí"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20sp"
                    android:id="@+id/txtResultado">

                </TextView>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="15sp"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="7sp"
                android:id="@+id/btnCalcular">
            </Button>

            <Button
                android:id="@+id/btnLimpiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="7sp"
                android:text="@string/limpiar">
            </Button>

            <Button
                android:id="@+id/btnCerrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/cerrar">
            </Button>
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>